# image-cgroupsv2-inspector

./: .gitignore  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  image-cgroupsv2-inspector  pyproject.toml  quay-vs-jfrog.md  requirements.txt
.github/workflows/: ci.yml  lint-test.yml  release.yml
manifests/: test-images.sh
manifests/jfrog/: jfrog-setup.sh  jfrog-teardown.sh
manifests/quay/: quay-setup.sh  quay-teardown.sh
manifests/quay/deep-scan-images/exec-cgv1/: Containerfile  entrypoint-exec.sh  go.mod  main.go
src/: __init__.py  _registry_filters.py  analysis_orchestrator.py  auth_utils.py  deep_scan.py  go_scan.py  html_reporter.py  image_analyzer.py  image_collector.py  jfrog_client.py  jfrog_collector.py  openshift_client.py  quay_client.py  registry_collector.py  scan_state.py  system_checks.py
src/templates/: report.html.j2
src/templates/assets/: LICENSES.md  datatables.min.js
tests/: test_analysis_orchestrator.py  test_cli_html_report.py  test_cli_jfrog.py  test_cli_registry.py  test_deep_scan.py  test_go_scan.py  test_html_reporter.py  test_image_analyzer.py  test_image_collector.py  test_image_timeout.py  test_jfrog_client.py  test_jfrog_collector.py  test_openshift_client.py  test_registry_collector.py
tests/fixtures/: expected_context.json  sample_report.csv
