[project]
name = "image-cgroupsv2-inspector"
# Keep in sync with src/__init__.py:__version__
version = "2.6.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from within except (too noisy for this codebase)
    "SIM108", # ternary operator (readability preference)
    "UP015",  # redundant open mode (readability preference)
    "RUF012", # mutable class default (intentional for class-level constants like regex patterns)
    "RUF001", # ambiguous unicode character (multiplication sign × is intentional)
]

[tool.ruff.lint.per-file-ignores]
"image-cgroupsv2-inspector" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
